<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar" />


    <LinearLayout
        style="@style/view_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/text_about_project_info"
            android:textColor="@color/black"
            android:textSize="@dimen/text_big" />


        <TextView
            android:id="@+id/tv_about_project_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/text_about_project_url"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_big" />


        <TextView
            android:id="@+id/tv_about_author_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/text_about_author_url"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_big" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:text="@string/text_about_award"
            android:textColor="@color/text_red"
            android:textSize="@dimen/text_big" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_140"
                android:layout_height="@dimen/dp_140"
                android:src="@mipmap/about_zfb" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/dp_2"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/dp_140"
                android:layout_height="@dimen/dp_140"
                android:src="@mipmap/about_wx" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_12">

            <TextView
                android:id="@+id/tv_about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/text_about_version"
                android:textColor="@color/black"
                android:textSize="@dimen/text_big" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
