<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_24">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_12">

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_type_11_choose_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_12"
                android:entries="@array/type_11_choose_5" />

            <android.support.design.button.MaterialButton
                android:id="@+id/bt_get_random_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp_6"
                android:text="@string/text_get_random_number"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:strokeColor="@color/app_color" />

            <android.support.design.button.MaterialButton
                android:id="@+id/bt_chart_11_choose_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:padding="@dimen/dp_6"
                android:text="@string/text_lottery_chart"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:strokeColor="@color/app_color" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/layout_lottery_number"
        style="@style/view_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_12">

            <com.peng.lottery.app.widget.LotteryLayout
                android:id="@+id/layout_lottery_shiyixuanwu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.design.button.MaterialButton
                android:id="@+id/bt_analyse_lottery_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:padding="@dimen/dp_6"
                android:text="@string/text_analyse_lottery_number"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:strokeColor="@color/app_color" />

            <android.support.design.button.MaterialButton
                android:id="@+id/bt_save_lottery_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:gravity="center"
                android:padding="@dimen/dp_6"
                android:text="@string/text_save_lottery_number"
                android:textAppearance="?android:attr/textAppearanceButton"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                app:strokeColor="@color/app_color" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>