<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp_12"
    android:background="@color/white"
    android:minWidth="260dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingLeft="@dimen/dp_12"
        android:paddingTop="@dimen/dp_12"
        android:paddingRight="@dimen/dp_12"
        android:text="@string/app_tip_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_big" />

    <com.peng.lottery.app.widget.MaxHeightLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:maxHeight="300dp">

        <TextView
            android:id="@+id/tv_info_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:maxHeight="200dp"
            android:padding="@dimen/dp_12"
            android:scrollbars="vertical"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_medium" />

    </com.peng.lottery.app.widget.MaxHeightLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">


        <android.support.design.button.MaterialButton
            android:id="@+id/bt_info_cancle"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_12"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/app_cancel_text"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/text_medium"
            android:visibility="gone"
            tools:ignore="UnusedAttribute" />

        <android.support.design.button.MaterialButton
            android:id="@+id/bt_info_ok"
            android:layout_width="@dimen/dp_60"
            android:layout_height="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_12"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:text="@string/app_confirm_text"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@color/text_blue"
            android:textSize="@dimen/text_medium"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>